Add Styling to the Keyboard

--- a/virtual-keyboard-app/src/components/VirtualKeyboard.css
+++ b/virtual-keyboard-app/src/components/VirtualKeyboard.css
@@ -3,7 +3,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border: 2px solid red;
+    width: 71.5%;
+    background-color: #D9DDE0;
+    background-color: #535157;
+    /* border: 2px solid red; */
     padding: 10px;
     border-radius: 5px;
   }
