--- a/virtual-keyboard-app/src/App.css
+++ b/virtual-keyboard-app/src/App.css
@@ -10,6 +10,8 @@ body, html {
   align-items: center;
   justify-content: center;
   height: 100vh;
+
+  overflow: hidden;
 }
 
 .center-container {
@@ -19,4 +21,12 @@ body, html {
   justify-content: center;
   text-align: center;
   padding: 20px;
+  /* border: 1px solid red; */
+}
+
+.theme-container{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  /* border: 1px solid blue; */
 }
