--- a/virtual-keyboard-app/src/components/ThemeChanger.css
+++ b/virtual-keyboard-app/src/components/ThemeChanger.css
@@ -1,8 +1,8 @@
 .themeChanger{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50px;
     cursor: pointer;
     /* border: 1px solid black; */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
