--- a/virtual-keyboard-app/src/components/ThemeChanger.css
+++ b/virtual-keyboard-app/src/components/ThemeChanger.css
@@ -1,6 +1,6 @@
 .themeChanger{
-    width: 30px;
-    height: 30px;
-    border-radius: 50px;
+    width: 40px;    
+    height: 40px;
+    border-radius: 50%;
     cursor: pointer;
 }
